components/Header/Header.module.css
.header {
    background: var(--inputs);
    border-bottom: 1px solid var(--gray-light);
}

.container {
    position: relative;
    max-width: 1440px;
    margin: 0 auto;
    padding-left: 64px;
    height: 72px;
    display: flex;
    align-items: center;
}

.logo {
    text-decoration: none;
    display: flex;
    align-items: center;
}
.nav {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    display: flex;
    gap: 32px;
}

.link {
    text-decoration: none;
    font-size: 16px;
    font-weight: 500;
    color: var(--main);
    transition: color 0.2s ease;
}

.link:hover {
    color: var(--grey-green);
}

.active {
    color: var(--grey-green);
}

